--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,2 @@
-<!--<button (click)="toggleMenu()" class="hamburger">
-  <span>toggle menu</span>
-</button>
--->
-<h1>
-  {{title}}
-</h1>
-
-<!-- <app-menu [@slideInOut]="menuState"></app-menu> -->
+<app-header></app-header>
 <app-navslide></app-navslide>
