Updated front page with logo and picture

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,10 @@
 .logo{
-  height: 64px;
   width: 64px;
-  background: "Logo2.png"
+  height: 64px;
+  left: 15px;
+  top: 15px;
+  margin-left: 0px;
+  background: transparent url(micdown.png);
+  position: fixed;
+  z-index: 2;
 }
