--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="logo">
-    <img src="vues.jpeg" height="64px" width="64px">
+  <div>
+    <img src="micdown.png" alt="" class="logo">
   </div>
 </header>
