--- a/src/app/banner-pic/banner-pic.component.css
+++ b/src/app/banner-pic/banner-pic.component.css
@@ -4,15 +4,20 @@
   height:100%;
 }
 .banner_picture{
-  position: center;
   z-index: 1;
-  padding: none;
-  display: block;
   margin: 0 auto;
-  background-size: cover;
-  background-repeat: no-repeat;
-  width: auto;
-  height: 100%;
+  height: auto;
+  min-height: 100%;
+  min-width: 100%;
+  width: auto ;
+  position: center center;
+  margin-top: -120px;
+  zoom: 50%;
+  left: 50%;
+  top: 0;
+  left: 0;
+  right: 80px;
+  background: url(Higher_40.jpg) no-repeat center center fixed;
 }
 .title{
   background: transparent;
@@ -27,4 +32,23 @@
   right: 0;
   top:150px;
   max-width: 600px;
+}
+@media only screen and (max-width: 767px){
+  .banner_picture{
+    z-index: 1;
+    margin: 0 auto;
+    height: auto;
+    min-height: 100%;
+    min-width: 100%;
+    width: auto ;
+    position: relative;
+    margin-left: -512px;
+    margin-top: -120px;
+    zoom: 50%;
+    left: 50%;
+    top: 0;
+    left: 0;
+    right: 80px;
+    background: url(Higher_40.jpg) no-repeat center center fixed;
+  }
 }
