--- a/src/app/banner-pic/banner-pic.component.html
+++ b/src/app/banner-pic/banner-pic.component.html
@@ -1,5 +1,5 @@
 <div>
-  <img src="Higher_40.jpg" width="2074px" height="1555px" class='banner_picture'>
+  <img src='Higher_40.jpg' width="2074px" height="1555px" class='banner_picture'>
   <div>
     <h1 class="title">World Animal Network</h1>
   </div>
