Added some changes to the background image zoom, but need revision

--- a/src/app/banner-pic/banner-pic.component.html
+++ b/src/app/banner-pic/banner-pic.component.html
@@ -3,4 +3,7 @@
   <div>
     <h1 class="title">World Animal Network</h1>
   </div>
+  <div>
+    <img src="wave.svg" class="wave">
+  </div>
 </div>
