--- a/src/app/banner-pic/banner-pic.component.css
+++ b/src/app/banner-pic/banner-pic.component.css
@@ -7,9 +7,9 @@
   z-index: 1;
   margin: 0 auto;
   height: auto;
+  width:100%;
   min-height: 100%;
   min-width: 100%;
-  width: auto ;
   position: center center;
   margin-top: -120px;
   zoom: 50%;
@@ -30,8 +30,27 @@
   position: absolute;
   left: 0;
   right: 0;
-  top:150px;
+  top:120px;
   max-width: 600px;
+}
+@media only screen and (max-width: 1400px){
+  .banner_picture{
+    z-index: 1;
+    margin: 0 auto;
+    height: auto;
+    min-height: 100%;
+    min-width: 100%;
+    width: auto ;
+    position: relative;
+    margin-left: -200px;
+    margin-top: -120px;
+    zoom: 50%;
+    left: 50%;
+    top: 0;
+    left: 0;
+    right: 80px;
+    background: url(Higher_40.jpg) no-repeat center center fixed;
+  }
 }
 @media only screen and (max-width: 767px){
   .banner_picture{
@@ -51,4 +70,9 @@
     right: 80px;
     background: url(Higher_40.jpg) no-repeat center center fixed;
   }
+}
+.wave{
+  background: url(wave.svg);
+  top:2000px;
+  z-index: 1;
 }
