added mobile menu system, desktop not finalized and working, mobile menu text not really working.

--- a/src/app/navslide/navslide.component.html
+++ b/src/app/navslide/navslide.component.html
@@ -8,6 +8,7 @@
     <li><button href="#">Product</button></li>
     <li><button href="#">Support us</button></li>
     <li><button href="#">Contact us</button></li>
+    <li><button href="#">About us</button></li>
     <div class="github"></div>
   </ul>
   <div class="toggle" (click)="toggle()"></div>
