--- a/src/app/new-menu/new-menu.component.html
+++ b/src/app/new-menu/new-menu.component.html
@@ -1,8 +1,14 @@
-<div>
-  <ul>
-    <li><a href="">Home</a></li>
-    <li><a href="">About us</a></li>
-    <li><a href="">Support us</a></li>
-    <li><a href="">Products</a></li>
+<div id='curtain'>
+  <span></span>
+  <span></span>
+  <span></span>
+  <span></span>
+  <ul class='menu-items'>
+    <li><button href="">Home</button></li>
+    <li><button href="">About us</button></li>
+    <li><button href="">Support Us</button></li>
+    <li><button href="">Product</button></li>
+    <li><button href="">Contact Us</button></li>
   </ul>
+  <div class="toggle" (click)="toggle()"></div>
 </div>
