Fixed the menu system, desktop menu bar margin needs fixing, have not added paragraph to the main page, mobile a tags needs to be changed to button tags

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-header></app-header>
-<app-new-menu></app-new-menu>
+<app-navbar></app-navbar>
+<app-navslide></app-navslide>
 <app-banner-pic></app-banner-pic>
+
