--- a/src/app/new-menu/new-menu.component.css
+++ b/src/app/new-menu/new-menu.component.css
@@ -1,4 +1,46 @@
 *{
+  margin: 0;
+  padding:0;
+  box-sizing: border-box;
+}
+
+nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family:  Arial, "Helvetica Neue", Helvetica, sans-serif;
+  min-height: 90px;
+}
+
+nav ul{
+  display: flex; width: 180%;
+  margin-left: -30%;
+  background-color: red;
+  justify-content: space-around;
+}
+
+nav ul li{
+  text-decoration: none;
+  list-style: none;
+}
+
+nav ul li button{
+  text-decoration: none;
+  border:none;
+  background:none;
+  font-size: 1.4em;
+}
+
+nav ul li button:hover{
+  text-decoration: none;
+  border:none;
+  background:none;
+  cursor:pointer;
+}
+
+
+
+/**{
   margin:0;
   padding: 0;
   text-decoration: none;
@@ -30,7 +72,17 @@ div ul li button{
   border: none;
   background: transparent;
 }
-
+div ul li button:hover{
+  color: white;
+  z-index: 3;
+  text-transform: uppercase;
+  font-weight: 100;
+  font-size: 2em;
+  border: none;
+  background: transparent;
+  cursor:pointer;
+}
+*/
 @media only screen and (max-width: 1024px){
   *
   {
@@ -100,7 +152,7 @@ div ul li button{
     height: 64px;
     background: transparent url(src/app/navslide/iconfinder_menu-alt_134216.png);
     background-repeat: no-repeat;
-    background-position: 5px;
+    backgro4und-position: 5px;
     z-index: 1000;
     cursor: pointer;
     transition: 0.5s
@@ -124,11 +176,13 @@ div ul li button{
     transition-delay: 0.7s;
   }
   #curtain .menu-items li{
+    position:flex;
     list-style: none;
     margin: 10px 0;
   }
   #curtain .menu-items li button{
-    text-decoration: none;
+    text-decoration: nonecur;
+
     color: #fff;
     font-size: 3em;
     border: none;
@@ -138,6 +192,9 @@ div ul li button{
     font-family:  Arial, "Helvetica Neue", Helvetica, sans-serif;
     cursor: pointer;
     position: relative;
+    text-transform: uppercase;
+    text-decoration: none;
+    justify-content: center;
   }
   #curtain .menu-items li button:before{
     content: '';
