--- a/src/app/new-menu/new-menu.component.html
+++ b/src/app/new-menu/new-menu.component.html
@@ -1,14 +1,16 @@
-<div id='curtain'>
-  <span></span>
-  <span></span>
-  <span></span>
-  <span></span>
-  <ul class='menu-items'>
-    <li><button href="">Home</button></li>
-    <li><button href="">About us</button></li>
-    <li><button href="">Support Us</button></li>
-    <li><button href="">Product</button></li>
-    <li><button href="">Contact Us</button></li>
-  </ul>
-  <div class="toggle" (click)="toggle()"></div>
-</div>
+<nav>
+  <div id='curtain'>
+    <span></span>
+    <span></span>
+    <span></span>
+    <span></span>
+    <ul class='menu-items'>
+      <li><button href="">Home</button></li>
+      <li><button href="">About us</button></li>
+      <li><button href="">Support Us</button></li>
+      <li><button href="">Product</button></li>
+      <li><button href="">Contact Us</button></li>
+    </ul>
+    <div class="toggle" (click)="toggle()"></div>
+  </div>
+</nav>
