Simplified the work area, deleted unneccesary folders and stuff

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
 <app-navslide></app-navslide>
 <app-banner-pic></app-banner-pic>
+<app-bodypara-main></app-bodypara-main>
 
