--- a/src/app/navslide/navslide.component.html
+++ b/src/app/navslide/navslide.component.html
@@ -4,11 +4,11 @@
   <span></span>
   <span></span>
   <ul class="menu-items">
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Product</a></li>
-    <li><a href="#">Support us</a></li>
-    <li><a href="#">Contact us</a></li>
-    <li><a href="#">About us</a></li>
+    <li><button href="#">Home</button></li>
+    <li><button href="#">Product</button></li>
+    <li><button href="#">Support us</button></li>
+    <li><button href="#">Contact us</button></li>
+    <li><button href="#">About us</button></li>
     <div class="github"></div>
   </ul>
   <div class="toggle" (click)="toggle()"></div>
