Moved from dev to stable, but mobile still needs work, and need to add social media at bottom

--- a/src/app/banner-pic/banner-pic.component.html
+++ b/src/app/banner-pic/banner-pic.component.html
@@ -1,4 +1,12 @@
 <div>
+  <div class="title">
+    <h1>World Animal Network</h1>
+  </div>
+  <div class="arrow-down">
+  </div>
+  <div class="notice">
+    <h3>Coming Soon!</h3>
+  </div>
   <img src='Higher_40.jpg' width="2074px" height="1555px" class='banner_picture'>
   <div class='wave-container' style="overflow: hidden">
     <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
