--- a/src/app/navslide/navslide.component.html
+++ b/src/app/navslide/navslide.component.html
@@ -4,7 +4,7 @@
   <span></span>
   <span></span>
   <ul class="menu-items">
-    <li><button (click)="goToPage('Home')">Home</button></li>
+    <li><button href='#'>Home</button></li>
     <li><button href="#">Product</button></li>
     <li><button href="#">Support us</button></li>
     <li><button href="#">Contact us</button></li>
