--- a/src/app/banner-pic/banner-pic.component.css
+++ b/src/app/banner-pic/banner-pic.component.css
@@ -26,14 +26,72 @@ div{
   font-family:  Arial, "Helvetica Neue", Helvetica, sans-serif;
   z-index:1;
   margin: 0 auto;
-  font-size: 3em;
+  font-size: 1.8em;
   color: #ffff;
   position: absolute;
   left: 0;
   right: 0;
-  top:150px;
-  max-width: 600px;
+  top:50px;
+
 }
+
+.notice{
+  text-align: center;
+  font-family:  Arial, "Helvetica Neue", Helvetica, sans-serif;
+  z-index:1;
+  margin: 0 auto;
+  font-size: 4em;
+  color: #ffff;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top:65%;
+}
+
+.arrow-down{
+  z-index: 2;
+  width:100%;
+  margin:0 auto;
+  text-align: center;
+}
+
+.arrow-donw::after{
+  content: "";
+  width: 40px;
+  z-index: 2;
+  height: 40px;
+  position: absolute;
+  margin: auto;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-right: 4px solid #fff;
+  border-bottom: 4px solid #fff;
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  -webkit-animation: 3s arrow infinite ease;
+  animation: 3s arrow infinite ease;
+}
+
+@-webkit-keyframes arrow{
+  0%, 100% {
+    top: 50px;
+  }
+  50%{
+    top: 80px;
+  }
+}
+
+@keyframes arrow{
+  0%, 100% {
+    top: 50px;
+  }
+  50%{
+    top: 80px;
+  }
+}
+
 .wave-container{
   position: relative;
   z-index: 1;
@@ -81,3 +139,4 @@ div{
     margin-left: 0;
   }
 }
+
